FlightPath 6.x Changelog
========================

2021-06-07
  Added schools select list option for user forms, made other cosmetic changes.
  
  Changed users module so that you can enter DEPT_CODE along with department.  Change table schema so that
  college, dept_code, and deparment are varchar 255.  Will use a machine name version of department if no DEPT_CODE
  is entered.
  
  Found a bug on the dashboard (system.module), where it states what day it is.  I was using strtotime("today"), which apparently
  was causing issues due to timezone conversions.  Switched it to time() and that fixed the issue.
  

2021-06-06
  Finishing up users screen for school id, both faculty and students.  Also added filter options to make it look
  more consistent.  Added pager to student users screen, since we might theoretically load the entire student
  list, both past and present.  It shows 30 at a time now.
  

2021-06-04
  Working on courses with new school_id.  Changed appearance of courses screen to look more like the other degree
  edit pages.  Made better use of tables and highlighting when you mouse over a row.  Added a filter form like others
  as well.
  

2021-06-03
  Added new schools filter option to degrees, and working on groups.  Filters on degrees list now actually
  a form (and added new form to groups) so other modules can modify with hook_form_alter if desired.  Right now,
  it's only really for the schools module.
  

2021-06-01
  Fixed bug in pager_query which was sometimes throwing numbers off.  Expanded functionality of the paget_query function.
  
  More work on school_id system, amending the need in some tables.  Decided to declare that CWIDs *must be unique* in FlightPath.
  Therefore, the users table will be the only place that a user's school_id is stored.
  
  Changed wording on user module, which stated CWID had to be numeric.  It does not.


2021-05-31
  Adding school_id to api and queries throughout FlightPath.
  

2021-05-27