@@ -654,8 +654,8 @@ class DegreePlan extends stdClass
         $group_g->assigned_to_semester_num = $semester_num;
         $group_g->title = "$title";
         $group_g->icon_filename = $icon_filename;
-        $group_g->hours_required = intval($cur["group_hours_required"]);
-        $group_g->min_hours_allowed = intval($cur["group_min_hours_allowed"]);
+        $group_g->hours_required = floatval($cur["group_hours_required"]);
+        $group_g->min_hours_allowed = floatval($cur["group_min_hours_allowed"]);
         $group_g->bool_placeholder = true;
         $obj_semester->list_groups->add($group_g);
 
